# chronicle

./: compile_shaders.py
chronicle/: Cargo.toml
chronicle/src/: core_loop.rs  lib.rs  vk_device.rs  vk_instance.rs  vk_swapchain.rs  window.rs
chronicle/src/common/: arc_mutex.rs  mod.rs  rc_cell.rs  timer.rs
chronicle/src/graphics/: camera.rs  mod.rs  mod_structs.rs  transform.rs  vk_cmd_buffer.rs  vk_cmd_pool.rs  vk_device.rs  vk_fence.rs  vk_instance.rs  vk_mesh.rs  vk_pipeline.rs  vk_render_pass.rs  vk_semaphore.rs  vk_shader_module.rs  vk_swapchain.rs  vk_vertex.rs  window.rs
chronicle/src/graphics/buffers/: mod.rs  vk_buffer.rs  vk_image.rs  vk_index_buffer.rs  vk_texture.rs  vk_uniform_buffer.rs  vk_vertex_buffer.rs
chronicle/src/graphics/descriptors/: vk_descriptor_layout.rs  vk_descriptor_pool.rs  vk_descriptor_set.rs
chronicle/src/graphics/utility/: constants.rs  mod.rs  platforms.rs  tools.rs
chronicle/src/graphics/vulkan/: mod.rs  vk_cmd_buffer.rs  vk_cmd_pool.rs  vk_cmd_queue.rs  vk_device.rs  vk_fence.rs  vk_graphics_pipeline.rs  vk_imgui.rs  vk_instance.rs  vk_logical_device.rs  vk_mesh.rs  vk_physical_device.rs  vk_pipeline.rs  vk_query_pool.rs  vk_render_pass.rs  vk_sampler.rs  vk_semaphore.rs  vk_shader_module.rs  vk_swapchain.rs  vk_vertex.rs
chronicle/src/graphics/vulkan/buffers/: mod.rs  vk_buffer.rs  vk_data_buffer.rs  vk_image.rs  vk_index_buffer.rs  vk_texture.rs  vk_uniform_buffer.rs  vk_vertex_buffer.rs
chronicle/src/graphics/vulkan/descriptors/: mod.rs  vk_descriptor_layout.rs  vk_descriptor_pool.rs  vk_descriptor_set.rs  vk_descriptor_set_layout.rs
chronicle/src/graphics/vulkan/raytracing/: mod.rs  vk_accel.rs  vk_blas.rs  vk_blas_instance.rs  vk_rt_pipeline.rs  vk_tlas.rs
chronicle/src/graphics/vulkan/utility/: constants.rs  debug.rs  platforms.rs
chronicle/src/input/: mod.rs
chronicle/src/resources/: mod.rs  model.rs  resource.rs  resource_manager.rs  resources.rs  texture.rs
chronicle/src/utility/: constants.rs  debug.rs  tools.rs
game/: Cargo.toml  imgui.ini
game/assets/builtin/shaders/src/: imgui.frag  imgui.vert  shader.frag  shader.vert
game/assets/builtin/shaders/src/raytracing/: common.glsl  host.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss
game/src/: main.rs
